css/main.css
body{
  margin: 0;
  padding: 0;
  overflow: hidden;
  font-family: 'Roboto Mono', monospace;
}

/* --------------------------------header */
header{
  width: 100%;
  height: 140px;
  display: grid;
  grid-template-rows: 50px 1fr ;
}

a{
  text-decoration: none;
  display: inline;
  color: black;
}

header .social-icons-container{
  width: 100%;
  height: 50px;
  display: grid;
  background-color: #372151;
}

.social-icons-container .icons{
  width: 300px;
  height: auto;
  display: flex;
  justify-self: end;
  align-items: center;
  justify-content: space-between;
  margin-right: 50px;
}

.icons a span::before{
 color: white;
 font-size: 25px;
}

nav{
  display: grid;
  grid-template-columns: 1fr 1fr;
}

nav .nav-logo-container{
  margin-left: 50px;
}

nav .nav-logo-container img{
  width: 220px;
  margin-top: 10px;
}

nav .profile-link{
  display: flex;
  align-items: center;
  justify-self: end;
  margin-right: 50px;
}

nav .profile-link a{
  border-bottom: 1px solid black;
}

/* --------------------------------main */
.main-home{
  display: grid;
  grid-template-columns: 1fr 4fr 1fr;
  height: 100vh;
  background-image: url(../assets/img/main-backg.jpg);
  background-size: cover;
  background-position: center;
}

.main-home-container{
  display: grid;
  grid-column: 2;
  justify-content: center;
  margin-top: 80px;
  height: 350px;
}

.main-home-container h1{
  color: white;
  text-shadow: 3px 3px rgba(139, 139, 139, .3);
  letter-spacing: 5px;
  font-weight: 700;
  font-size: 50px;
  text-align: center;
}

.main-button{
  width: 100px;
  height: 50px;
  background-color: #372151;
  border-radius: 2px;
  color: white;
  font-size: 18px;
  font-weight: 700;
  border: none;
  display: grid;
  align-items: center;
  justify-self: center;
  text-align: center;
  padding: 0 5px;
}

